Finishing the view for the first screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,5 @@
     <color name="light_orange">#ee5217</color>
     <color name="light_grey">#303030</color>
     <color name="dark_grey">#0e0e0e</color>
-
+    <color name="white">#fff</color>
 </resources>
