--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="DrunkmasterTheme"
         parent="@style/Theme.AppCompat.Light.DarkActionBar">
@@ -15,6 +15,17 @@
 
         <!-- Support library compatibility -->
         <item name="background">@color/dark_orange</item>
+    </style>
+
+    <style name="orangeButton">
+        <item name="android:background">@drawable/rounded_orange_button</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="orangeText">
+        <item name="android:textColor">@color/light_orange</item>
+        <item name="android:textSize">20sp</item>
     </style>
 
 </resources>
