--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,15 @@
 <resources>
+
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="margin_medium">16dp</dimen>
+    <dimen name="image_size">50dp</dimen>
+
+    <dimen name="medium_padding">16dp</dimen>
+
+
+    <dimen name="text_size_large">22sp</dimen>
+
 </resources>
