--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,8 +17,14 @@
         <item name="background">@color/dark_orange</item>
     </style>
 
-    <style name="orangeButton">
+    <style name="orangeButtonRounded">
         <item name="android:background">@drawable/rounded_orange_button</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="orangeButton">
+        <item name="android:background">@color/light_orange</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">16sp</item>
     </style>
@@ -27,5 +33,15 @@
         <item name="android:textColor">@color/light_orange</item>
         <item name="android:textSize">20sp</item>
     </style>
+
+    <style name="greyTopLabel">
+        <item name="android:background">@color/light_grey</item>
+    </style>
+
+    <style name="greyTopLabelText">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
 
 </resources>
