Apps selecting is ready

--- a/app/src/main/res/layout/activity_apps.xml
+++ b/app/src/main/res/layout/activity_apps.xml
@@ -38,6 +38,6 @@
         android:layout_weight="0.72"
         style="@style/orangeButton"
         android:text="@string/next_step"
-        android:id="@+id/button" />
+        android:id="@+id/btnAppsActivity" />
 
 </LinearLayout>
