Ready Confirm Screen

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/vomit"
-        android:id="@+id/ivHomeActivityVommit"
+        android:id="@+id/ivHomeActivityStickmanVommiting"
         android:layout_gravity="center_horizontal"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -37,6 +37,7 @@
         android:layout_marginBottom="20dp"
         android:id="@+id/tvHomeActivitySlogan"
         style="@style/orangeText"
+        android:textColor="@color/light_grey"
         android:layout_above="@+id/btnHomeActivityLock"
         android:layout_centerHorizontal="true" />
 
