--- a/app/src/main/res/layout/activity_time.xml
+++ b/app/src/main/res/layout/activity_time.xml
@@ -1,13 +1,92 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="bg.stoykov.drunk.drunkmaster.TimeActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:orientation="vertical"
+android:weightSum="5"
+tools:context="bg.stoykov.drunk.drunkmaster.TimeActivity">
 
-    <TextView android:text="Time" android:layout_width="wrap_content"
+    <RelativeLayout
+    android:layout_height="0dp"
+    android:layout_width="fill_parent"
+    android:layout_weight="1.5"
+    style="@style/greyTopLabel"
+    android:id="@+id/rlAppsActivityTopLabel">
+
+
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true">
+
+
+            <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:id="@+id/imageView2"
+                    android:src="@drawable/clock"
+                    android:layout_marginBottom="10dp"
+                    android:layout_above="@+id/tvAppsActivityTopLabelText"
+                    android:layout_centerHorizontal="true"
+                    android:layout_gravity="center_horizontal" />
+
+            <TextView android:text="@string/time_label" android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/tvAppsActivityTopLabelText"
+                    style="@style/greyTopLabelText"/>
+
+        </LinearLayout>
+    </RelativeLayout>
+
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:id="@+id/rlTimeContainer"
+    android:background="@color/dark_grey"
+    android:padding="5dp"
+    android:layout_weight="2.8" >
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView" />
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
+
+        <EditText
+            android:layout_width="120dp"
+            android:padding="10dp"
+            android:layout_height="120dp"
+            android:inputType="time"
+            android:background="@color/light_grey"
+            android:text="1"
+            android:textSize="70sp"
+            android:textColor="@color/white"
+            android:ems="10"
+            android:id="@+id/etTimeActivityHours"
+            android:gravity="center" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/hours"
+            android:textSize="25sp"
+            android:textColor="@color/light_orange"
+            android:id="@+id/textView"
+            android:layout_marginTop="5dp"
+            android:layout_gravity="center_horizontal" />
+
+    </LinearLayout>
 
 </RelativeLayout>
+
+<Button
+    android:layout_width="fill_parent"
+    android:layout_height="0dp"
+    android:layout_weight="0.72"
+    style="@style/orangeButton"
+    android:text="@string/next_step"
+    android:id="@+id/btnTimeActivityNextStep" />
+
+</LinearLayout>
