--- a/app/src/main/res/layout/app_item.xml
+++ b/app/src/main/res/layout/app_item.xml
@@ -39,6 +39,8 @@
             <CheckBox
                 android:layout_width="25dp"
                 android:layout_height="25dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginRight="20dp"
                 android:button="@android:color/transparent"
                 android:background="@drawable/radio"
                 android:id="@+id/cbAppItem"
