--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,9 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+
+    <dimen name="device_padding">16dp</dimen>
+
     <dimen name="margin_medium">16dp</dimen>
     <dimen name="image_size">50dp</dimen>
 
