finaly service works!

--- a/app/src/main/res/layout/activity_time.xml
+++ b/app/src/main/res/layout/activity_time.xml
@@ -60,7 +60,7 @@ tools:context="bg.stoykov.drunk.drunkmaster.TimeActivity">
             android:layout_height="120dp"
             android:inputType="time"
             android:background="@color/light_grey"
-            android:text="1"
+            android:text=""
             android:textSize="70sp"
             android:textColor="@color/white"
             android:ems="10"
