--- a/app/src/main/res/layout/activity_unlock.xml
+++ b/app/src/main/res/layout/activity_unlock.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="bg.stoykov.drunk.drunkmaster.HomeActivity">
+    tools:context="bg.stoykov.drunk.drunkmaster.UnlockActivity">
 
     <RelativeLayout
         android:orientation="vertical"
@@ -14,13 +14,22 @@
         android:layout_alignParentEnd="true">
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/vomit"
-            android:id="@+id/ivHomeActivityStickmanVommiting"
+            android:layout_width="220dp"
+            android:layout_height="220dp"
+            android:id="@+id/imageView3"
+            android:src="@drawable/locked"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true" />
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/splash_smile"
+            android:id="@+id/imageView4"
+            android:layout_above="@+id/imageView3"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="20dp" />
     </RelativeLayout>
 
 
@@ -37,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/slogan"
+            android:text="@string/locked"
             android:layout_marginBottom="10dp"
             android:id="@+id/tvHomeActivitySlogan"
             style="@style/orangeText"
@@ -50,14 +59,9 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/lock"
+            android:text="@string/unlock"
             style="@style/orangeButtonRounded"
-            android:id="@+id/btnHomeActivityLock"
-            android:layout_alignLeft="@+id/linearLayout"
-            android:layout_alignStart="@+id/linearLayout"
-            android:layout_alignParentBottom="true"
-            android:layout_alignRight="@+id/ivHomeActivityStickmanVommiting"
-            android:layout_alignEnd="@+id/ivHomeActivityStickmanVommiting"
+            android:id="@+id/btnUnlockActivityUnlock"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="0dp" />
