--- a/app/src/main/res/layout/app_item.xml
+++ b/app/src/main/res/layout/app_item.xml
@@ -9,7 +9,7 @@
         android:id="@+id/ivAppItem"
         android:layout_width="@dimen/image_size"
         android:layout_height="@dimen/image_size"
-        android:contentDescription="@string/image"/>
+        android:contentDescription=" "/>
 
     <LinearLayout
         android:layout_width="match_parent"
