--- a/app/src/main/res/layout/activity_time.xml
+++ b/app/src/main/res/layout/activity_time.xml
@@ -27,8 +27,6 @@ tools:context="bg.stoykov.drunk.drunkmaster.TimeActivity">
                     android:id="@+id/imageView2"
                     android:src="@drawable/clock"
                     android:layout_marginBottom="10dp"
-                    android:layout_above="@+id/tvAppsActivityTopLabelText"
-                    android:layout_centerHorizontal="true"
                     android:layout_gravity="center_horizontal" />
 
             <TextView android:text="@string/time_label" android:layout_width="wrap_content"
@@ -73,7 +71,7 @@ tools:context="bg.stoykov.drunk.drunkmaster.TimeActivity">
             android:text="@string/hours"
             android:textSize="25sp"
             android:textColor="@color/light_orange"
-            android:id="@+id/textView"
+            android:id="@+id/tvTimeActivityHours"
             android:layout_marginTop="5dp"
             android:layout_gravity="center_horizontal" />
 
