--- a/app/src/main/res/layout/splash_screen.xml
+++ b/app/src/main/res/layout/splash_screen.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/splash_logo"
-        android:id="@+id/splashlogo"
+        android:id="@+id/ivSplashScreenLogo"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
@@ -18,9 +18,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/splash_smile"
-        android:id="@+id/imageView"
+        android:id="@+id/ivSplashScreenSmile"
         android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/splashlogo"
-        android:layout_alignEnd="@+id/splashlogo" />
+        android:layout_alignRight="@+id/ivSplashScreenLogo"
+        android:layout_alignEnd="@+id/ivSplashScreenLogo" />
 
 </RelativeLayout>
